# freeunit

./: .gitignore  CHANGES  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EOL.md  README.md  RELEASE-PROCESS.md  SECURITY.md  TODO.md  UNFREEZE.md  version
.github/workflows/: analysis-clang-ast.yml  build-deb.yml  build-distros.yml  build-test.yml  check-whitespace.yaml  ci-dev-distro-compiler.yaml  ci.yml  cifuzz.yml  clang-ast.yaml  claude.yml  docker.yml  fuzzing.yml  lint-whitespace.yml  release-docker.yml  seccomp-test.yaml  security-seccomp.yml  unitctl.yml
auto/: files  help  sources
docs/: changes.xml  unit-openapi.yaml
pkg/: eol.json
pkg/community/: CENTOS.ALMALINUX.md  REMI.md
pkg/community/straggler-hunt/: STRAGGLER.PLAN.2026-05-30.md  STRAGGLER.PLAN.md  STRAGGLER.TABLE.md  snyk-fix.md  straggler_metaphor.md
pkg/deb/: .gitignore  Makefile  Makefile.go  Makefile.jsc-common  Makefile.jsc11  Makefile.jsc17  Makefile.jsc18  Makefile.jsc19  Makefile.jsc20  Makefile.jsc21  Makefile.perl  Makefile.php  Makefile.php83  Makefile.php84  Makefile.php85  Makefile.python27  Makefile.python310  Makefile.python311  Makefile.python312  Makefile.python313  Makefile.python314  Makefile.python38  Makefile.python39  Makefile.ruby  Makefile.wasm  build-local.sh  mirror-setup.sh  pkg-qa.sh  smoke-asserts.sh  sury-setup.sh
pkg/deb/debian/: control.in  dirs  freeunit-dev.lintian-overrides  freeunit.default  freeunit.init  freeunit.lintian-overrides  freeunit.logrotate  freeunit.postinst  freeunit.postrm  freeunit.preinst  freeunit.unit-debug.service  freeunit.unit.service  rules.in  unit.example.config
pkg/deb/debian.module/: control-noarch.in  control.in  freeunit.example-jsc11-config  freeunit.example-jsc17-config  freeunit.example-jsc18-config  freeunit.example-jsc19-config  freeunit.example-jsc20-config  freeunit.example-jsc21-config  freeunit.example-perl-config  freeunit.example-php-config  freeunit.example-php8.3-config  freeunit.example-php8.4-config  freeunit.example-php8.5-config  freeunit.example-python2.7-config  freeunit.example-python3.10-config  freeunit.example-python3.11-config  freeunit.example-python3.12-config  freeunit.example-python3.13-config  freeunit.example-python3.14-config  freeunit.example-python3.8-config  freeunit.example-python3.9-config  freeunit.example-ruby-config  rules-noarch.in  rules.in  unit.example-php8.3-config  unit.example-php8.4-config  unit.example-php8.5-config  unit.example-python3.13-config  unit.example-python3.14-config
pkg/docker/: Dockerfile.builder-php8.5  Dockerfile.builder-trixie  Dockerfile.go-1.25  Dockerfile.go-1.26  Dockerfile.go1.24  Dockerfile.go1.25  Dockerfile.go1.26  Dockerfile.java-17  Dockerfile.java-21  Dockerfile.jsc17  Dockerfile.jsc21  Dockerfile.minimal  Dockerfile.node-20  Dockerfile.node-22  Dockerfile.node-24  Dockerfile.node-26  Dockerfile.node20  Dockerfile.node22  Dockerfile.node24  Dockerfile.perl-5.38  Dockerfile.perl-5.40  Dockerfile.perl-5.42  Dockerfile.perl5.38  Dockerfile.perl5.40  Dockerfile.php-8.3  Dockerfile.php-8.4  Dockerfile.php-8.5  Dockerfile.php8.3  Dockerfile.php8.4  Dockerfile.php8.5  Dockerfile.python-3.12  Dockerfile.python-3.12-slim  Dockerfile.python-3.13  Dockerfile.python-3.13-slim  Dockerfile.python-3.14  Dockerfile.python-3.14-slim  Dockerfile.python3.12  Dockerfile.python3.12-slim  Dockerfile.python3.13  Dockerfile.python3.13-slim  (+13 more)
pkg/docker/local/: Dockerfile.minimal  Dockerfile.php-8.5  Dockerfile.php8.5  Dockerfile.wasm
pkg/eol/: .dockerignore  Cargo.toml  Dockerfile  PLAN.md  README.md  entrypoint.sh  run.sh
pkg/eol/src/: main.rs
pkg/rpm/: .gitignore  Makefile  Makefile.go  Makefile.jsc-common  Makefile.jsc17  Makefile.jsc21  Makefile.perl  Makefile.php  Makefile.python312  Makefile.python313  Makefile.python314  Makefile.ruby  Makefile.wasm  unit.module.spec.in  unit.spec.in
scripts/: unfreeze-labels.sh  unfreeze-sync.sh
src/: nxt_capability.c  nxt_cert.c  nxt_cgroup.c  nxt_conf.c  nxt_conf_validation.c  nxt_conn_accept.c  nxt_conn_read.c  nxt_controller.c  nxt_epoll_engine.c  nxt_file.c  nxt_h1proto.c  nxt_h1proto_websocket.c  nxt_http_chunk_parse.c  nxt_http_compression.c  nxt_http_proxy.c  nxt_http_route.c  nxt_http_route_addr.c  nxt_http_websocket.c  nxt_isolation.c  nxt_kqueue_engine.c  nxt_main_process.c  nxt_mp.c  nxt_mp.h  nxt_openssl.c  nxt_otel.c  nxt_otel.h  nxt_php_sapi.c  nxt_port.c  nxt_port.h  nxt_port_memory.c  nxt_port_rpc.c  nxt_port_rpc.h  nxt_port_socket.c  nxt_process.h  nxt_script.c  nxt_string.c  nxt_unit.c
src/java/: nxt_jni_InputStream.c  nxt_jni_Request.c
src/otel/: Cargo.toml
src/otel/src/: lib.rs
src/perl/: nxt_perl_psgi.c
src/python/: nxt_python_asgi_lifespan.c  nxt_python_asgi_websocket.c  nxt_python_wsgi.c
src/ruby/: nxt_ruby.c  nxt_ruby.h  nxt_ruby_stream_io.c
src/test/: nxt_port_fail_test.c  nxt_tests.c  nxt_tests.h
src/wasm/: nxt_wasm.c
src/wasm-wasi-component/: Cargo.toml
test/: README.md  conftest.py  run-local-full.sh  run-local-temp.sh  run-local.sh  test_access_log.py  test_asgi_websockets.py  test_fake_upstream_proxy_chunked_response.py  test_go_isolation.py  test_otel.py  test_proxy_chunked.py  test_python_isolation.py  test_tls.py
test/fake_otlp/: Cargo.toml  PLAN.md  README.md
test/fake_otlp/src/: grpc.rs  main.rs
test/fake_upstream/: Cargo.toml  PLAN.md  README.md
test/fake_upstream/src/: main.rs
test/security/seccomp/: test-af-alg.sh
tools/unitctl/: CHANGELOG.md  GNUmakefile  README.md  openapi-config.json
tools/unitctl/unit-client-rs/: Cargo.toml
tools/unitctl/unit-client-rs/src/: control_socket_address.rs  unit_client.rs  unitd_docker.rs  unitd_process.rs
tools/unitctl/unit-openapi/: Cargo.toml  README.md
tools/unitctl/unit-openapi/openapi-templates/: Cargo.mustache  api_mod.mustache  request.rs
tools/unitctl/unit-openapi/openapi-templates/hyper/: configuration.mustache
tools/unitctl/unit-openapi/src/apis/: error.rs
tools/unitctl/unitctl/: Cargo.toml
tools/unitctl/unitctl/src/: known_size.rs  requests.rs  wait.rs
tools/unitctl/unitctl/src/cmd/: edit.rs  save.rs
(+4 files in other folders)
