[package]
name = "otel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false

# OpenTelemetry trace export over OTLP/HTTP.
#
# HTTP only, no TLS — by design, for an LTS fork:
#   * The stable, non-experimental path uses the blocking reqwest client driven
#     by the dedicated-thread BatchSpanProcessor — no tokio runtime we manage,
#     no async executor. gRPC (tonic) is intentionally not supported.
#   * No TLS stack is linked. reqwest 0.13 dropped the ring rustls provider, so
#     enabling rustls would pull aws-lc-sys (a cmake/C build) and native-tls
#     would link a second OpenSSL into this staticlib. We avoid both: the OTLP
#     endpoint must be plain http:// (a collector on localhost / internal net).
[dependencies]
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
opentelemetry-semantic-conventions = "0.32"
