[package]
name = "unit-client-rs"
version = "1.35.6"
authors = ["Elijah Zupancic"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "unit_client_rs"

[features]
# this preserves the ordering of json
default = ["serde_json/preserve_order"]

[dependencies]
custom_error = "1.9"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["rustls-native-certs", "webpki-roots", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "client", "http1", "http2", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39"
tokio = { version = "1.34", features = ["macros"] }
futures = "0.3"
hex = "0.4"
which = "8.0"

unit-openapi = { path = "../unit-openapi" }
rustls = "0.23.5"
bollard = "0.21"
regex = "1.10.4"
pbr = "1.1.1"

[dev-dependencies]
rand = "0.9"
