[package]
name = "unit-openapi"
version = "1.35.6"
authors = ["team@freeunit.org"]
description = "FreeUnit (ex NGINX Unit) is a lightweight and versatile application runtime that provides the essential components for your web application as a single open-source server: running application code, serving static assets, handling TLS and request routing.   **Important**: Unit's API is designed to expose any part of its configuration as an addressable endpoint.  Suppose a JSON object is stored at `/config/listeners/`:   ```json { \"*:8080\": { \"pass\": \"applications/wp_emea_dev\" } } ```  Here, `/config/listeners/_*:8080` and `/config/listeners/_*:8080/pass` are also endpoints.  Generally, object options are addressable by their names, array items—by their indexes (`/array/0/`).    **Note**: By default, Unit is configured through a UNIX domain socket. To use this specification with OpenAPI tools interactively, [start](https://docs.freeunit.org/howto/source/#source-startup) Unit with a TCP port as the control socket."
license = "Apache 2.0"
edition = "2024"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.2"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "client", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
futures = "0.3"
